# ai-council

./: .gitignore  attachments.py  council.py  db.py  main.py  pyproject.toml  render.yaml  requirements.txt  web_search.py
static/: index.html
