[project]
name = "ai-council"
version = "0.1.0"
description = "Multi-agent deliberation with Claude"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.32.0",
]

[tool.uv]
package = false
